re PR c++/21987 (New testsuite failure g++.dg/warn/conversion-function-1.C)

PR c++/21987
	* decl.c (grok_op_properties): Add missing warn_conversion check.

From-SVN: r100940